<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <RelativeLayout
        android:id="@+id/draw_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        android:visibility="visible">

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/draw_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_draw_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/md_red_300"
            android:text="Clear" />

        <Button
            android:id="@+id/btn_draw_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@color/md_green_300"
            android:text="Send" />
    </LinearLayout>

    <WebView
        android:id="@+id/wolfram_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:visibility="gone">

    </WebView>

    <LinearLayout
        android:id="@+id/done_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/md_red_300"
            android:text="Done" />

    </LinearLayout>

    <WebView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/batman"
        android:visibility="gone"
        android:background="@color/white">
    </WebView>



</RelativeLayout>